// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkout should create a component 1`] = `
<Checkout>
  <MockedView
    hasNavigator={false}
  >
    <div>
      <div
        className="css-1tf1q5l"
      />
    </div>
  </MockedView>
</Checkout>
`;

exports[`Checkout should show loading indicator 1`] = `
<Checkout>
  <MockedView
    hasNavigator={false}
  >
    <div>
      <div
        className="css-1tf1q5l"
      >
        <LoadingIndicator>
          <div
            className="css-1aid7je"
          >
            <IndicatorCircle
              color="#5ccee3"
              paused={false}
              size={32}
              strokeWidth={3}
            >
              <svg
                className="css-12jxe4c"
                height={32}
                viewBox="25 25 50 50"
                width={32}
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  className="css-1ei1yr2"
                  cx="50"
                  cy="50"
                  r="20"
                />
              </svg>
            </IndicatorCircle>
          </div>
        </LoadingIndicator>
      </div>
    </div>
  </MockedView>
</Checkout>
`;
